// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-3 cmHgkJ"
  >
    <p
      class="header__Link-djltcn-5 efXqLE"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-3 cmHgkJ"
>
  <p
    class="header__Link-djltcn-5 hDDQlk"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 cemvNu"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-3 cmHgkJ"
  >
    <div
      class="header__Group-djltcn-1 foENYq"
    >
      <p
        class="header__Link-djltcn-5 hDDQlk"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-5 hDDQlk"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-1 foENYq"
    >
      <div
        class="header__Search-djltcn-7 kVoiTu"
      >
        <button
          class="header__SearchIcon-djltcn-8 fMhbpD"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-10 gbamuT"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-11 dJGAgi"
      >
        <button
          class="header__Picture-djltcn-4 gAcfWs"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-6 gvdzro"
        >
          <div
            class="header__Group-djltcn-1 foENYq"
          >
            <button
              class="header__Picture-djltcn-4 gAcfWs"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-5 hDDQlk"
            >
              Test
            </p>
          </div>
          <div
            class="header__Group-djltcn-1 foENYq"
          >
            <p
              class="header__Link-djltcn-5 hDDQlk"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-3 header__Feature-djltcn-14 cmHgkJ gpqXuc"
  >
    <h2
      class="header__FeatureCallOut-djltcn-16 iTDjbc"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-15 gDqJDu"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-9 kvtGSj"
    >
      Play
    </button>
  </div>
</div>
`;
